fix bug #75173 incorrect behavior of AppendIterator::append in foreach loop